test_cases/fail/f05.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT x
x=5
IF x > 3
START IF
    PRINT: "yes"
END IF
END SCRIPT
